--- a/index.html
+++ b/index.html
@@ -344,6 +344,8 @@
     </section>
     
     <!-- Gallery Section -->
+    <!-- Firebase-driven gallery mount (non-destructive) -->
+<div id="gbkw-gallery-mount" data-empty-text="No items yet."></div>
     <section id="gallery" class="py-20 bg-gray-900">
         <div class="container mx-auto px-6">
             <!-- Section Header -->
